# hello_wasm

./: Cargo.toml  index.html
pkg/: hello_wasm.js  hello_wasm_bg.js  hello_wasm_bg.wasm  package.json
src/: lib.rs
src/render/: mesh.rs  mod.rs  shader.rs
src/res/: vert.glsl  vert2d.glsl
